--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "~3.5.0",
-    "gulp": "~3.9.1",
-    "gulp-jshint": "~2.0.0",
-    "gulp-mocha": "~2.2.0",
-    "should": "^8.2.2",
-    "supertest": "^1.2.0"
+    "chai": "3.5.0",
+    "gulp": "3.9.1",
+    "gulp-jshint": "2.0.0",
+    "gulp-mocha": "2.2.0",
+    "jshint": "2.9.1",
+    "should": "8.2.2",
+    "supertest": "1.2.0"
   },
   "dependencies": {
-    "async": "~1.5.2",
-    "cheerio": "~0.20.0",
-    "connect": "~3.2.0",
-    "js-yaml": "~3.3.0",
-    "moment": "^2.12.0",
-    "mongodb": "~2.1.7",
-    "request": "~2.69.0",
+    "async": "1.5.2",
+    "cheerio": "0.20.0",
+    "connect": "3.2.0",
+    "js-yaml": "3.3.0",
+    "moment": "2.12.0",
+    "mongodb": "2.1.7",
+    "request": "2.69.0",
     "swagger-tools": "0.9.*"
   }
 }
